<resources>
    <string name="app_name">PrintDemo</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="port">
        <item>NET</item>
        <item>BLE</item>
        <item>USB</item>
    </string-array>
    <string name="connect">连接</string>
    <string name="discon">断开</string>
    <string name="hint">请输入IP地址</string>
    <string name="contextandcode">打印文本，直线，条码</string>
    <string name="read">读取数据</string>
    <string name="image">打印图片</string>
    <string name="image1">打印光栅位图</string>
    <string name="text">标签打印文本</string>
    <string name="tsc_demo">TSC打印测试</string>
    <string name="barcode">打印条码</string>
    <string name="bleselect">请选择蓝牙设备</string>
    <string name="usbselect">请选择USB设备</string>
    <string name="toast_discon_success">断开连接成功</string>
    <string name="toast_discon_faile">断开连接失败</string>
    <string name="toast_present_con">当前并未连接</string>
    <string name="send_success">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="not_con_printer">当前并未连接</string>
    <string name="usb_pre_con">当前连接的USB设备数：</string>
    <string name="con_success">连接成功</string>
    <string name="con_failed">连接失败</string>
    <string name="con_has_discon">连接已断开</string>
    <string name="sb">设备</string>
    <string name="start_pos_activity">跳转到POS打印</string>
    <string name="pos80">POS80打印</string>
</resources>
